# rFBA

./: .dockerignore  .env.docker  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20250117_000001_example_migration.rs.example
plugins/code_generator/: Cargo.toml  plugin.toml
plugins/code_generator/src/: error.rs  lib.rs
plugins/code_generator/src/api/: business_api.rs  codegen_api.rs  mod.rs
plugins/code_generator/src/dto/: codegen_dto.rs  mod.rs
plugins/code_generator/src/entity/: gen_business.rs  gen_column.rs  mod.rs
plugins/code_generator/src/service/: business_service.rs  codegen_service.rs  mod.rs
plugins/config/: Cargo.toml  plugin.toml
plugins/config/migrations/: 001_create_config_table.sql
plugins/config/src/: error.rs  lib.rs
plugins/config/src/api/: config_api.rs  mod.rs
plugins/config/src/dto/: config_dto.rs  mod.rs
plugins/config/src/entity/: config.rs  mod.rs
plugins/config/src/service/: config_service.rs
plugins/dict/: Cargo.toml  plugin.toml
plugins/dict/migrations/: 001_create_dict_tables.sql
plugins/dict/src/: error.rs  lib.rs
plugins/dict/src/api/: dict_data_api.rs  dict_type_api.rs  mod.rs
plugins/dict/src/dto/: dict_data_dto.rs  dict_type_dto.rs  mod.rs
plugins/dict/src/entity/: dict_data.rs  dict_type.rs  mod.rs
plugins/dict/src/service/: dict_data_service.rs  dict_type_service.rs  mod.rs
plugins/email/: Cargo.toml  plugin.toml
plugins/email/migrations/: 001_create_email_record_table.sql
plugins/email/src/: error.rs  lib.rs
plugins/email/src/api/: email_api.rs  mod.rs
plugins/email/src/dto/: email_dto.rs  mod.rs
plugins/email/src/entity/: email_record.rs  mod.rs
plugins/email/src/service/: email_service.rs  mod.rs
plugins/email/templates/: welcome.html
plugins/notice/: Cargo.toml  plugin.toml
plugins/notice/migrations/: 001_create_notice_table.sql
plugins/notice/src/: error.rs  lib.rs
plugins/notice/src/api/: mod.rs  notice_api.rs
plugins/notice/src/dto/: common.rs  mod.rs  notice_dto.rs
plugins/notice/src/entity/: mod.rs  notice.rs
plugins/notice/src/service/: mod.rs  notice_service.rs
plugins/oauth2/: Cargo.toml  plugin.toml
plugins/oauth2/src/: error.rs  lib.rs
plugins/oauth2/src/api/: mod.rs  oauth2_api.rs
plugins/oauth2/src/dto/: mod.rs  oauth_dto.rs
plugins/oauth2/src/entity/: mod.rs  oauth_bind.rs
plugins/oauth2/src/service/: mod.rs  oauth2_service.rs
sql/: fix_user_table.sql  insert_test_users.sql
sql/sqlite/: init_test_data.sql
src/: lib.rs  main.rs
src/app/: mod.rs
src/app/access_log/: mod.rs
src/app/access_log/dto/: access_log_query.rs  access_log_response.rs  create_access_log.rs  mod.rs
src/app/access_log/middleware/: access_log_middleware.rs  mod.rs
src/app/access_log/service/: access_log_service.rs  mod.rs
src/app/admin/: mod.rs
src/app/admin/api/: mod.rs
src/app/auth/: mod.rs  router.rs
src/app/auth/api/: auth.rs  mod.rs
src/app/auth/dto/: captcha.rs  login.rs  mod.rs  token.rs
src/app/auth/service/: auth_service.rs  mod.rs  rbac_service.rs
src/app/complete_module/: mod.rs  router.rs
src/app/complete_module/api/: complete.rs  mod.rs
src/app/complete_module/dto/: health_check.rs  mod.rs  module_info.rs  system_status.rs
src/app/complete_module/service/: complete_service.rs  mod.rs
src/app/data_scope/: mod.rs
src/app/data_scope/dto/: data_rule_config.rs  data_rule_query.rs  data_rule_response.rs  data_scope_config.rs  data_scope_query.rs  data_scope_response.rs  mod.rs
src/app/data_scope/filter/: data_scope_filter.rs  dept_filter.rs  mod.rs  user_filter.rs
src/app/data_scope/middleware/: data_scope_extractor.rs  data_scope_middleware.rs  mod.rs
src/app/data_scope/router/: data_rule_router.rs  data_scope_router.rs  mod.rs
src/app/data_scope/service/: data_rule_service.rs  data_scope_service.rs  mod.rs
src/app/dept/: mod.rs
src/app/dept/api/: dept.rs  mod.rs
src/app/dept/dto/: create_dept.rs  dept_query.rs  dept_response.rs  mod.rs
src/app/dict_data/: mod.rs
src/app/dict_type/: mod.rs
src/app/file_info/: mod.rs
src/app/log/: mod.rs
src/app/login_log/: mod.rs
src/app/menu/: mod.rs  router.rs
src/app/monitor/: mod.rs
src/app/opera_log/: mod.rs
src/app/permission/: mod.rs  router.rs
src/app/plugin/: cache.rs  config.rs  discovery.rs  dynamic_loader.rs  init.rs  injector.rs  install.rs  manager.rs  metrics.rs  middleware.rs  mod.rs  sandbox.rs  signature.rs
src/app/role/: mod.rs  router.rs
src/app/role_permission/: mod.rs  router.rs
src/app/schedule_job/: mod.rs
src/app/sys_config/: mod.rs
src/app/task/: mod.rs
src/app/user/: mod.rs  router.rs
src/app/user_role/: mod.rs  router.rs
src/common/: enums.rs  mod.rs  pagination.rs
src/common/exception/: mod.rs
src/common/response/: mod.rs
src/common/security/: jwt.rs  rbac.rs
src/core/: conf.rs  mod.rs  path_conf.rs  registrar.rs
src/database/: data_rule_repo.rs  data_scope_repo.rs  menu_repo.rs  mod.rs  permission_repo.rs  redis.rs  role_permission_repo.rs  role_repo.rs  user_repo.rs  user_role_repo.rs
src/database/entity/: access_log.rs  data_rule.rs  data_scope.rs  data_scope_rule.rs  dept.rs  dict_data.rs  dict_type.rs  file_info.rs  log_level.rs  login_log.rs  menu.rs  mod.rs  notice.rs  opera_log.rs  permission.rs  plugin.rs  plugin_config.rs  prelude.rs  role.rs  role_data_scope.rs  role_permission.rs  schedule_job.rs  schedule_job_log.rs  sys_config.rs  sys_notice.rs  sys_permission.rs  sys_role.rs  sys_role_permission.rs  sys_user.rs  sys_user_role.rs  system_metric.rs  task.rs  task_result.rs  task_scheduler.rs  user.rs  user_role.rs
src/middleware/: access_middleware.rs  jwt_auth_middleware.rs  mod.rs  permission_middleware.rs  request_log_middleware.rs
src/utils/: captcha.rs  mod.rs  test_password.rs
src/utils/encrypt/: mod.rs
src/utils/file/: mod.rs
src/utils/pagination/: mod.rs
src/utils/time/: mod.rs
src/websocket/: actions.rs  auth.rs  handlers.rs  mod.rs  server.rs
tools/: init_sql_data.rs  test_config.rs
(+220 files in other folders)
